# SLM-FineTuning

./: .gitignore  Modelfile  data-generation.py  law_prompt.py  preprocessing.py  pyproject.toml  tm1data.json
FineTuning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
checkpoints/: adapter_config.json
data/: instruction.json
src/: data-gen.py  law_prompt.py  web-scraping.py
